# b-asic

./: .clang-format  .clang-tidy  .coveragerc  .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE  MANIFEST.in  README.md  build.sh  meson.build  pyproject.toml  requirements.txt  requirements_doc.txt  requirements_test.txt  setup.py  testbuild.py
.github/workflows/: codeql.yml  documentation.yml  hdl-tests.yml  run_coverage.yml  tests.yml
b_asic/: .mailmap  __init__.py  _preferences.py  architecture.py  core_operations.py  core_schedulers.py  fft_operations.py  graph_component.py  graph_id.py  list_schedulers.py  logger.py  mpl_utils.py  operation.py  port.py  precedence_chart.py  process.py  quantization.py  resource_assigner.py  resources.py  save_load_structure.py  schedule.py  scheduler.py  schema.py  sfg_generator.py  sfg_generators.py  signal.py  signal_flow_graph.py  signal_generator.py  simulation.py  special_operations.py  types.py  utility_operations.py  utils.py  wdf_operations.py
b_asic/GUI/: __init__.py  _preferences.py  about_window.py  arrow.py  drag_button.py  gui_interface.py  gui_interface.ui  main_window.py  plot_window.py  port_button.py  precedence_graph_window.py  properties_window.py  select_sfg_window.py  settings.py  show_pc_window.py  signal_generator_input.py  simulate_sfg_window.py  simulation_worker.py  util_dialogs.py  utils.py
b_asic/codegen/: __init__.py  vhdl.py
b_asic/gui_utils/: __init__.py  about_window.py  color_button.py  decorators.py  icons.py  mpl_window.py  plot_window.py
b_asic/research/: __init__.py  interleaver.py
b_asic/scheduler_gui/: __init__.py  _preferences.py  _version.py  axes_item.py  compile.py  graphics_axes_item.py  graphics_component_item.py  graphics_graph_event.py  graphics_graph_item.py  graphics_signal.py  graphics_timeline_item.py  logger.py  main_window.py  main_window.ui  operation_item.py  preferences_dialog.py  scheduler_event.py  scheduler_item.py  signal_item.py  timeline_item.py  ui_main_window.py
b_asic/sfg_gui/: arrow.py  drag_button.py  (+3 more)
dependencies/: CMakeLists.txt
dependencies/fmt/: CMakeLists.txt
docs_sphinx/: GUI.rst  Makefile  _scraper.py  conf.py  contributing.rst  gui_utils.rst  index.rst  publications.rst  research.rst  scheduler_gui.rst  sfg_gui.rst
examples/: README.rst  auto_scheduling_with_custom_io_times.py  connectmultiplesfgs.py  firstorderiirfilter.py  fivepointwinograddft.py  folding_example_with_architecture.py  introduction.py  latency_offset_scheduling.py  ldlt_matrix_inverse.py  lti_system_analysis.py  lwdfallpass.py  memory_constrained_scheduling.py  scheduling_pipelining_retiming.py  schedulingexample.py  secondorderdirectformiir.py  secondorderdirectformiir_architecture.py  thirdorderblwdf.py  threepointwinograddft.py  twotapfirsfg.py
legacy/: README.md
lib/: meson.build
lib/b_asic/: __init__.py  architecture.py  core_operations.py  data_type.py  fft_operations.py  graph_component.py  list_schedulers.py  logger.py  meson.build  operation.py  port.py  process.py  quantization.py  resource_assigner.py  resources.py  save_load_structure.py  schedule.py  scheduler.py  sfg.py  sfg_generators.py  signal.py  signal_flow_graph.py  signal_generator.py  simulation.py  special_operations.py  state_space.py  transfer_function.py  types.py  utility_operations.py  utils.py  wdf_operations.py
lib/b_asic/architecture_gui/: __init__.py  arrow.py  main_window.py  process_item.py  resource_item.py
lib/b_asic/code_printer/: __init__.py  printer.py  util.py  vhdl_printer.py
lib/b_asic/code_printer/test/: __init__.py
lib/b_asic/code_printer/testbench/: streaming_matrix_transposition_tb.vhdl  test.py
lib/b_asic/code_printer/vhdl/: __init__.py  common.py  memory_storage.py  processing_element.py  register_storage.py  test_bench.py  top_level.py  types.py  util.py  vhdl_printer.py
lib/b_asic/codegen/: meson.build
lib/b_asic/codegen/test/: __init__.py
lib/b_asic/codegen/testbench/: .gitignore  test.py
lib/b_asic/codegen/vhdl/: __init__.py  architecture.py  common.py  entity.py  memory_storage.py  meson.build  processing_element.py  register_storage.py  test_bench.py  top_level.py
lib/b_asic/gui_utils/: about_window.py  color_button.py  decorators.py  meson.build  mpl_window.py
lib/b_asic/research/: interleaver_codegen.py  meson.build
lib/b_asic/scheduler_gui/: __init__.py  axes_item.py  compile.py  main_window.py  main_window.ui  meson.build  operation_item.py  preferences_dialog.py  scheduler_event.py  scheduler_item.py  timeline_item.py  ui_main_window.py
lib/b_asic/sfg_generators/: __init__.py  digital_filters.py  fft.py  matrix_inversion.py  matrix_operations.py  wave_digital_filters.py
lib/b_asic/sfg_gui/: __init__.py  _preferences.py  main_window.py  meson.build  port_button.py  select_sfg_window.py  signal_generator_input.py  simulate_sfg_window.py  simulation_worker.py
lib/b_asic/tb_printer/: __init__.py
lib/b_asic/tb_printer/cocotb/: __init__.py  cocotb_printer.py  template.py
lib/b_asic/tb_printer/vhdl/: __init__.py  vhdl_tb_printer.py
lib/b_asic/wdf/: __init__.py  lattice.py
src/: algorithm.h  algorithm.hpp  debug.h  debug.hpp  main.cpp  meson.build  number.h  number.hpp  simulation.cpp  simulation.h  simulation.hpp  span.h  span.hpp
src/simulation/: compile.cpp  compile.h  compile.hpp  format_code.h  format_code.hpp  instruction.h  instruction.hpp  run.cpp  run.h  run.hpp  simulation.cpp  simulation.h  simulation.hpp
subprojects/: .gitignore
test/: conftest.py  test_architecture.py  test_codegen.py  test_core_operations.py  test_core_schedulers.py  test_fast_simulation.py  test_graph_id_generator.py  test_gui.py  test_inputport.py  test_operation.py  test_outputport.py  test_process.py  test_quantization.py  test_resources.py  test_schedule.py  test_scheduler.py  test_scheduler_gui.py  test_schema.py  test_sfg.py  test_sfg_generator.py  test_sfg_generators.py  test_signal.py  test_signal_generator.py  test_simulation.py  test_simulation_gui.py  test_utils.py  test_wdf_operations.py
(+171 files in other folders)
