[project]
name = "b-asic"
description = "Better ASIC Toolbox"
readme = "README.md"
maintainers = [{ name = "Oscar Gustafsson", email = "oscar.gustafsson@liu.se" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "qtpy",
  "graphviz>=0.19",
  "matplotlib>=3.7",
  "setuptools_scm[toml]>=6.2",
  "networkx>=3",
  "pulp",
  "qtawesome",
]
classifiers = [
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Development Status :: 3 - Alpha",
]
dynamic = ["version", "authors"]

[project.optional-dependencies]
pyqt6 = ["pyqt6"]
pyside6 = ["pyside6"]
test = [
  "pytest",
  "pytest-cov",
  "pytest-qt",
  "pytest-timeout",
  "pytest-xvfb",
  "pytest-xdist",
  "scipy",
]
doc = [
  "sphinx",
  "furo",
  "numpydoc",
  "sphinx-gallery",
  "mplsignal",
  "sphinx-copybutton",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["b_asic*"]

[build-system]
requires = [
  "setuptools>=45",
  "setuptools_scm[toml]>=6.2",
  "wheel",
  "oldest-supported-numpy"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "b_asic/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"
fallback_version = "0.0+UNKNOWN"

[project.urls]
homepage = "https://gitlab.liu.se/da/B-ASIC"
documentation = "https://da.gitlab-pages.liu.se/B-ASIC/"

[tool.black]
skip-string-normalization = true
preview = true
line-length = 88
exclude = "(test/test_gui/*|b_asic/scheduler_gui/ui_main_window.py)"

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["b_asic", "test"]
skip = ["test/test_gui", "b_asic/scheduler_gui/ui_main_window.py"]

[tool.mypy]
packages = ["b_asic", "test"]
no_site_packages = true
ignore_missing_imports = true

[tool.coverage.report]
precision = 2

[tool.ruff]
exclude = ["examples", "test", "docs_sphinx"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "SIM", "B", "NPY", "C4", "UP", "RUF", "A"]
ignore = ["F403", "B008", "B021", "B006", "UP038", "RUF023", "A005"]

[tool.typos]
default.extend-identifiers = { ba = "ba", addd0 = "addd0", inout = "inout", ArChItEctUrE = "ArChItEctUrE" }
