[project]
name = "b-asic"
description = "Better ASIC Toolbox"
readme = "README.md"
authors = [
  { name = "Oscar Gustafsson", email = "oscar.gustafsson@liu.se" },
  { name = "Mikael Henriksson", email = "mikael.henriksson@liu.se" },
  { name = "Frans Skarman", email = "frans.skarman@liu.se" },
  { name = "Petter Källström", email = "petter.kallstrom@liu.se" },
  { name = "Olle Hansson", email = "olle.hansson@liu.se" },
  { name = "Adam Jakobsson" },
  { name = "Andreas Bolin" },
  { name = "Angus Lothian" },
  { name = "Arvid Westerlund" },
  { name = "Felix Goding" },
  { name = "Ivar Härnqvist" },
  { name = "Jacob Wahlman" },
  { name = "Kevin Scott" },
  { name = "Rasmus Karlsson" },
  { name = "Simon Bjurek" },
]
maintainers = [{ name = "Oscar Gustafsson", email = "oscar.gustafsson@liu.se" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "qtpy",
  "graphviz>=0.19",
  "matplotlib>=3.7",
  "networkx>=3",
  "pulp",
  "qtawesome",
  "natsort",
]
classifiers = [
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Development Status :: 3 - Alpha",
]
dynamic = ["version"]

[project.optional-dependencies]
pyqt6 = ["pyqt6"]
pyside6 = ["pyside6"]
test = [
  "pytest",
  "pytest-cov",
  "pytest-qt",
  "pytest-timeout",
  "pytest-xvfb",
  "pytest-xdist",
  "scipy",
]
doc = [
  "sphinx",
  "furo",
  "numpydoc",
  "sphinx-gallery",
  "mplsignal",
  "sphinx-copybutton",
]

[project.urls]
homepage = "https://gitlab.liu.se/da/B-ASIC"
documentation = "https://da.gitlab-pages.liu.se/B-ASIC/"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["b_asic*"]

[build-system]
requires = ["setuptools>=80", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "b_asic/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"
fallback_version = "0.0+UNKNOWN"

[tool.mypy]
packages = ["b_asic", "test"]
no_site_packages = true
ignore_missing_imports = true

[tool.coverage.report]
precision = 2

[tool.ruff]
exclude = ["examples", "docs_sphinx"]

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "SIM",
  "B",
  "NPY",
  "C4",
  "UP",
  "RUF",
  "A",
  "I",
  "G",
  "D",
  "SLOT",
  "RET504",
  "PT",
  "PERF102",
]
ignore = [
  "F403",
  "B008",
  "B021",
  "B006",
  "UP038",
  "RUF023",
  "A005",
  "E741",
  "D101",
  "D102",
  "D103",
  "D105",
  "D107",
  "D200",
  "D203",
  "D205",
  "D212",
  "D413",
  "D418",
]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["D1", "D401"]
"b_asic/scheduler_gui/ui_main_window.py" = ["D100"]

[tool.codespell]
ignore-words-list = ["inout"]
