python_sources = [
    '_preferences.py',
    'architecture.py',
    'core_operations.py',
    'fft_operations.py',
    'graph_component.py',
    'list_schedulers.py',
    'logger.py',
    'operation.py',
    'port.py',
    'process.py',
    'quantization.py',
    'resource_assigner.py',
    'resources.py',
    'save_load_structure.py',
    'schedule.py',
    'scheduler.py',
    'sfg_generators.py',
    'signal.py',
    'signal_flow_graph.py',
    'signal_generator.py',
    'simulation.py',
    'special_operations.py',
    'types.py',
    'utility_operations.py',
    'utils.py',
    '__init__.py',
]

py3.install_sources(python_sources, subdir: 'b_asic')

subdir('codegen')
subdir('gui_utils')
subdir('research')
subdir('scheduler_gui')
subdir('sfg_gui')
