python_sources = [
    '__init__.py',
    '_preferences.py',
    'axes_item.py',
    'compile.py',
    'main_window.py',
    'operation_item.py',
    'preferences_dialog.py',
    'scheduler_event.py',
    'scheduler_item.py',
    'signal_item.py',
    'timeline_item.py',
    'ui_main_window.py',
]

py3.install_sources(python_sources, subdir: 'b_asic/scheduler_gui')
