python_sources = [
    '__init__.py',
    '_preferences.py',
    'arrow.py',
    'drag_button.py',
    'gui_interface.py',
    'main_window.py',
    'port_button.py',
    'precedence_graph_window.py',
    'properties_window.py',
    'select_sfg_window.py',
    'signal_generator_input.py',
    'simulate_sfg_window.py',
    'simulation_worker.py',
    'util_dialogs.py',
]

py3.install_sources(python_sources, subdir: 'b_asic/sfg_gui')
